# tiny

./: .gitignore  CMakeLists.txt  README.md  main.cpp  tiny_image.cpp  tiny_image.h  tiny_pixel.h
src/: main.cpp
src/math/: TinyTypes.h
src/render/: TinyImage.cpp  TinyImage.h  TinyPixel.cpp  TinyPixel.h  tiny_image.h  tiny_pixel.cpp
